# esp3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml
main/camera/: CMakeLists.txt
main/resources/: server_main.css  server_main.html  server_main.js
main/resources/include/: bootstrap.min_css.h  favicon_png.h  jquery-3.6.4.min_js.h  server_main_css.h  server_main_html.h  server_main_js.h
main/src/: camera.cpp  camera.h  main.cpp  multipart.cpp  multipart.h  printer.cpp  printer.h  sdcard.cpp  sdcard.h  server.cpp  server.h  settings.cpp  settings.h  state.h  uart.cpp  uart.h  utils.cpp  utils.h  wifi.cpp  wifi.h
sample_config/: settings
